Clear sensitive data from .env.example
Removed sensitive information from the .env.example file.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Required Confluence auth
-CONFLUENCE_BASE_URL=https://akshatanand.atlassian.net
-CONFLUENCE_EMAIL=akshatanandmallik@gmail.com
-CONFLUENCE_API_TOKEN=ATATT3xFfGF0BDJJviK4XMMI0fdZav0XbBYRiLzCkxKNOqtj1DuJ-L_Jf2hyqwXlNR0tfNuG266QJ-17I95GDRF8_ZIwUXsh5u74ZHjmPAfWBbji8Y7Pmbj3jWvs5eqsIGbrLdZ-3k9kU634A_EPPAftGKu0U_W55d7BSE5RmUguv0L_TrTr0a8=E8493571
+CONFLUENCE_BASE_URL=
+CONFLUENCE_EMAIL=
+CONFLUENCE_API_TOKEN
 
 # Server
 PORT=8080
@@ -11,7 +11,7 @@ AWS_REGION=us-east-1
 BEDROCK_MODEL_ID=anthropic.claude-3-5-sonnet-20240620-v1:0
 
 # Gemini (provider=gemini)
-GEMINI_API_KEY=AIzaSyBnz2FU3LquKTUDeuE2FuskFYXtlBrPSRE
+GEMINI_API_KEY=
 GEMINI_MODEL=gemini-3-flash-preview
 
 # GitLab Duo (provider=gitlab_duo)
